--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/carrier.yml
@@ -99,6 +99,8 @@
     prefix: carrier
   - type: IntelRecoverCorpseObjectiveOnDeath
     value: 0.2
+  - type: RMCSurgeryXenoHeart
+    item: RMCOrganXenoHeartT2
 
 - type: entity
   parent: RMCXenoCarrierBase
@@ -211,4 +213,3 @@
     distance: 2.5
   - type: XenoGenerateEggs
   - type: XenoEggSustainer
-    
