--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -120,6 +120,8 @@
       state: ravager
   - type: IntelRecoverCorpseObjectiveOnDeath
     value: 0.7
+  - type: RMCSurgeryXenoHeart
+    item: RMCOrganXenoHeartT3
   - type: TantrumSpeedBuff
   - type: XenoShield
   - type: XenoLeap
