--- a/Resources/Prototypes/_RMC14/Body/Parts/xeno.yml
+++ b/Resources/Prototypes/_RMC14/Body/Parts/xeno.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: RMCHeadXeno
   name: "xenomorph head"
-  parent: [BaseItem, BaseHead]
+  parent: BaseHead
   categories:
   - HideSpawnMenu
