--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -187,7 +187,7 @@
         - BulletImpassable
   - type: CMSurgeryTarget
   - type: Body
-    prototype: Xenomorph
+    prototype: Xenonid
   - type: Xeno
   - type: UserInterface
     interfaces:
