--- a/Resources/Prototypes/_RMC14/Entities/Surgery/cm_surgery_steps.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Surgery/cm_surgery_steps.yml
@@ -205,7 +205,7 @@
 - type: entity
   parent: CMSurgeryStepBase
   id: RMCSurgeryRemoveXenoOrgan
-  name: Remove xenomorph organ
+  name: Remove xenonid organ
   components:
   - type: CMSurgeryStep
     skill: 2
