--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
@@ -39,13 +39,16 @@
   longRange: true
 
 - type: entity
-  abstract: true
   parent: CMEncryptionKey
   id: RMCEncryptionKeySPP
   name: SPP radio encryption key
   components:
   - type: Sprite
     state: upp_key
+  - type: EncryptionKey
+    channels:
+    - SPP
+    defaultChannel: SPP
 
 - type: entity
   parent: RMCEncryptionKeySPP
@@ -88,12 +91,13 @@
 - type: entity
   parent: RMCHeadsetIcons
   id: RMCHeadsetSPP
-  name: SPP-CMD headset
+  name: SPP headset
   components:
   - type: ContainerFill
     containers:
       key_slots:
       - CMEncryptionKeyColony
+      - RMCEncryptionKeySPP
 
 - type: entity
   parent: RMCHeadsetIcons
@@ -104,7 +108,6 @@
     containers:
       key_slots:
       - RMCEncryptionKeySPPCommand
-      - CMEncryptionKeyColony
 
 - type: entity
   parent: RMCHeadsetIcons
@@ -115,7 +118,6 @@
     containers:
       key_slots:
       - RMCEncryptionKeySPPEngineer
-      - CMEncryptionKeyColony
 
 - type: entity
   parent: RMCHeadsetIcons
@@ -126,4 +128,3 @@
     containers:
       key_slots:
       - RMCEncryptionKeySPPMedic
-      - CMEncryptionKeyColony
