--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
@@ -1123,3 +1123,13 @@
     - id: RMCMagazinePistolD50WinterWyvernHIAP
       amount: 2
     - id: RMCWeaponPistolCOD50WinterWyvern
+
+- type: entity
+  parent: CMBeltMarine
+  id: RMCMAR40BeltFilled
+  suffix: Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCMagazineRifleMAR40
+      amount: 5
