--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/satchels.yml
@@ -483,7 +483,7 @@
   parent: RMCSatchelWelder
   id: RMCSatchelSPPWelder
   name: UCP3-E technician welderpack
-  description: A special version of the Union Combat Pack MK3 featuring a small fueltank for quick blowtorch refueling. Used by UPP Sappers.
+  description: A special version of the Union Combat Pack MK3 featuring a small fueltank for quick blowtorch refueling. Used by SPP Sappers.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Back/Satchels/SPP/welder.rsi
