--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
@@ -17,13 +17,12 @@
     components:
     - type: Skills
       skills:
-        RMCSkillCqc: 2
-        RMCSkillEndurance: 3
-        RMCSkillFirearms: 2
-        RMCSkillFireman: 2
-        RMCSkillMedical: 1
-        RMCSkillEngineer: 1
-        RMCSkillConstruction: 1
+        RMCSkillConstruction: 2
+        RMCSkillEngineer: 3
+        RMCSkillFirearms: 1
+        RMCSkillFireman: 1
+        RMCSkillJtac: 1
+        RMCSkillVehicles: 1
     - type: JobPrefix
       prefix: rmc-job-prefix-spp-engineer
   hidden: true
@@ -66,13 +65,12 @@
     prototypes: [ RMCGearSPPEngineer ]
   - type: Skills
     skills:
-      RMCSkillCqc: 2
-      RMCSkillEndurance: 3
-      RMCSkillFirearms: 2
-      RMCSkillFireman: 2
-      RMCSkillMedical: 1
-      RMCSkillEngineer: 1
-      RMCSkillConstruction: 1
+      RMCSkillConstruction: 2
+      RMCSkillEngineer: 3
+      RMCSkillFirearms: 1
+      RMCSkillFireman: 1
+      RMCSkillJtac: 1
+      RMCSkillVehicles: 1
 
 - type: startingGear
   id: RMCGearSPPEngineer
