--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
@@ -87,9 +87,9 @@
     outerClothing: RMCArmorSPPHeavySpecialist
     gloves: RMCHandsVeteranSPP
     shoes: CMBootsBlackFilled
-    suitstorage: RMCWeaponLMGM60
+    suitstorage: RMCWeaponLMGM60 # TODO RMC14 : Replace with PKP
     id: RMCIDSPP
-    belt: CMM77BeltFilled
+    belt: CMM77BeltFilled # TODO RMC14 : Replace with T73, NP92 or Revolver
     back: RMCSatchelSPPRifleman
     pocket1: RMCPouchAutoinjectorFill
     pocket2: RMCPouchExplosiveFilledC4SPP
