--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
@@ -14,6 +14,9 @@
   special:
   - !type:AddComponentSpecial
     components:
+    - type: NpcFactionMember
+      factions:
+      - SPP
     - type: Skills
       skills:
         RMCSkillFirearms: 1
@@ -23,25 +26,13 @@
 
 - type: entity
   parent: MarkerBase
-  id: RMCSpawnerSPPRifleman
-  name: spp spawner rifleman
+  id: RMCRandomHumanoidSPPRifleman
+  name: spp ghost role rifleman
   suffix: Spawner, Player
   components:
   - type: Sprite
     layers:
     - state: red
-  - type: ConditionalSpawner
-    prototypes:
-    - RMCRandomHumanoidSPPRifleman
-
-- type: entity
-  id: RMCRandomHumanoidSPPRifleman
-  name: spp ghost role rifleman
-  suffix: Role, Player
-  components:
-  - type: Sprite
-    sprite: Markers/cross.rsi
-    state: red
   - type: RandomHumanoidSpawner
     settings: RMCSPPRifleman
 
@@ -53,13 +44,12 @@
     name: rmc-job-name-spp-soldier
     description: rmc-job-description-spp-soldier
     rules: rmc-ghost-role-information-spp-rules
+    reregister: false
+    job: RMCSPPRifleman
     raffle:
       settings: short
-  - type: Loadout
-    prototypes: [ RMCGearSPPRifleman ]
-  - type: Skills
-    skills:
-      RMCSkillFirearms: 1
+  - type: GhostRoleApplySpecial
+    squad: SquadSPP
 
 - type: startingGear
   id: RMCGearSPPRifleman
