--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -137,3 +137,16 @@
 
 - type: Tag
   id: RMCSquadIntel
+
+- type: entity
+  parent: SquadBase
+  id: SquadSPP
+  name: SPP
+  components:
+  - type: SquadTeam
+    color: "#9b0612"
+    radio: SPP
+    minimapBackground:
+      sprite: _RMC14/Interface/map_blips.rsi
+      state: background_spp
+    # RMC14-TODO: squad groups
