--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/sapper.yml
@@ -26,6 +26,7 @@
         RMCSkillFireman: 1
         RMCSkillJtac: 1
         RMCSkillVehicles: 1
+    - type: SquadArmorWearer
     - type: JobPrefix
       prefix: rmc-job-prefix-spp-engineer
   hidden: true
