--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -149,4 +149,5 @@
     minimapBackground:
       sprite: _RMC14/Interface/map_blips.rsi
       state: background_spp
-    # RMC14-TODO: squad groups
+    canSupplyDrop: false
+    group: SPP
