--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/rifleman.yml
@@ -20,6 +20,7 @@
     - type: Skills
       skills:
         RMCSkillFirearms: 1
+    - type: SquadArmorWearer
     - type: JobPrefix
       prefix: rmc-job-prefix-spp-soldier
   hidden: true
