--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/rmc_communications_console_spp.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/rmc_communications_console_spp.yml
@@ -4,6 +4,7 @@
   suffix: SPP
   components:
   - type: OverwatchConsole
+    canOrbitalBombardment: false
     group: SPP
   - type: TacticalMapComputer
     group: SPP
