forgot the npc faction
currently not hostile to UNMC because ALL turrets would shoot them

--- a/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
+++ b/Resources/Prototypes/_RMC14/Factions/rmc_factions.yml
@@ -7,9 +7,16 @@
   id: RMCXeno
   hostile:
   - UNMC
+  - SPP
 
 - type: npcFaction
   id: RMCDumb
   hostile:
   - UNMC
+  - RMCXeno
+  - SPP
+
+- type: npcFaction
+  id: SPP
+  hostile:
   - RMCXeno
