--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/rmc_communications_console_spp.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/rmc_communications_console_spp.yml
@@ -6,6 +6,9 @@
   - type: OverwatchConsole
     canOrbitalBombardment: false
     group: SPP
+    leaderIcon:
+      sprite: _RMC14/Interface/cm_job_icons.rsi
+      state: upp_sl_a
   - type: TacticalMapComputer
     group: SPP
 
