--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
@@ -36,6 +36,9 @@
     - type: SquadArmorWearer
       leader: true
     - type: SquadLeader
+      icon:
+        sprite: _RMC14/Interface/cm_job_icons.rsi
+        state: upp_sl_a
     - type: RMCPointing
     - type: JobPrefix
       prefix: rmc-job-prefix-spp-leader
