--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
@@ -34,6 +34,9 @@
     soundGunshot:
       collection: RMCFlamerShoot
   - type: ShootUseDelay
+  - type: ContainerContainer
+    containers:
+      gun_magazine: !type.ContainerSlot
   - type: ItemSlots
     slots:
       gun_magazine:
