spend 2 hours debugging my own typo

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Flamethrowers/m34_flamer.yml
@@ -36,7 +36,7 @@
   - type: ShootUseDelay
   - type: ContainerContainer
     containers:
-      gun_magazine: !type.ContainerSlot
+      gun_magazine: !type:ContainerSlot
   - type: ItemSlots
     slots:
       gun_magazine:
