--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
@@ -34,9 +34,9 @@
 - type: startingGear
   id: RMCGearSurvivorSecurity
   equipment:
-#    head: # TODO RMC14
+    head: RMCArmorHelmetSecurity
     eyes: CMGlassesSecurity
-    jumpsuit: ClothingUniformJumpsuitSec # TODO RMC14 /obj/item/clothing/under/rank/security
+    jumpsuit: RMCJumpsuitCivilianSecurity
     outerClothing: RMCArmorVestWeYa
     gloves: RMCHandsVeteran
     shoes: RMCShoesJackboots
