Add names from PolarisSS13

--- a/Resources/Prototypes/_RMC14/Species/skrell.yml
+++ b/Resources/Prototypes/_RMC14/Species/skrell.yml
@@ -10,6 +10,9 @@
   markingLimits: MobSkrellMarkingLimits
   dollPrototype: MobSkrellDummy
   skinColoration: Hues
+  maleFirstNames: RMCNamesSkrellFirst
+  femaleFirstNames: RMCNamesSkrellFirst
+  lastNames: RMCNamesSkrellLast
 
 - type: speciesBaseSprites
   id: MobSkrellSprites
