--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/intel_officer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/intel_officer.yml
@@ -53,6 +53,8 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: io
+    - type: SquadNameOverride
+      name: cm-job-name-intel
 
 - type: startingGear
   id: CMGearIntelOfficer
