--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
@@ -15,6 +15,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
     - MarineRequisition
     - MarineJTAC
   - type: RMCHeadset
