--- a/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/provost.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/provost.yml
@@ -14,6 +14,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
     - MarineEngineer
     - MarineMedical
     - MarineRequisition
