--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_base_id.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_base_id.yml
@@ -140,6 +140,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
     - MarineRequisition
     - MarineJTAC
     - MarineIntel
