--- a/Resources/Prototypes/_RMC14/Entities/Structures/communications_tower.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/communications_tower.yml
@@ -110,6 +110,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
     - MarineRequisition
     - MarineJTAC
     - MarineIntel
