--- a/Resources/Prototypes/_RMC14/Roles/Jobs/ghosts.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/ghosts.yml
@@ -55,3 +55,10 @@
   components:
   - type: GhostRoleApplySpecial
     squad: SquadIntel
+
+- type: randomHumanoidSettings
+  parent: RMCRandomHumanoidBase
+  id: RMCQuebecBase
+  components:
+  - type: GhostRoleApplySpecial
+    squad: SquadQuebec
