--- a/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/squads.yml
@@ -140,6 +140,23 @@
 
 - type: entity
   parent: SquadBase
+  id: SquadQuebec
+  name: Quebec
+  components:
+  - type: SquadTeam
+    color: "#36003B"
+    radio: MarineQuebec
+    accessLevels:
+    - CMAccessAlpha
+    - CMAccessBravo
+    - CMAccessCharlie
+    - CMAccessDelta
+    minimapBackground:
+      sprite: _RMC14/Interface/map_blips.rsi
+      state: background_quebec
+
+- type: entity
+  parent: SquadBase
   id: SquadSPP
   name: SPP
   components:
