--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
@@ -68,6 +68,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
   - type: HeadsetMultiBroadcast
     cooldown: 60
   - type: RMCHeadset
@@ -94,6 +95,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
   - type: HeadsetMultiBroadcast
     cooldown: 60
   - type: RMCHeadset
@@ -182,6 +184,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
     - MarineMedical
   - type: HeadsetMultiBroadcast
     cooldown: 60
@@ -223,6 +226,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
   - type: RMCHeadset
     radioTextIncrease: 3
 
@@ -290,6 +294,7 @@
     - MarineDelta
     - MarineEcho
     - MarineFoxtrot
+    - MarineQuebec
   - type: RMCHeadset
     radioTextIncrease: 3
 
